<?php
namespace DesignPatterns\Behavioral\Visitor;

class Visitor extends AbstractVisitor
{
    public function visit(AbstractElement $element)
    {
        // TODO: Implement visit() method.
    }
}